Fixed display of scrollbar when not needed

--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -311,7 +311,7 @@ nav2 {
 nav, nav2 {
   width: 230px;
   position: fixed;
-  overflow-y: scroll;
+  overflow-y: auto;
   top: 220px;
   bottom: 20px;
   background: #fbfbfb;
